@@ -2,6 +2,11 @@
 Version 1.0.2, Aug 3, 2006
 -------------------------------
 
+XML:   Fixed bug CASTOR-1482 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem related to MapItem class and namespaces
+       Details: http://jira.codehaus.org/browse/CASTOR-1482
+       (Werner - 20060801)
+
 All:   Resolved issue CASTOR-1484 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Seperated responsibilities of AbstractMappingLoader for holding its current state and generation of descriptors.
        Details: http://jira.codehaus.org/browse/CASTOR-1484
